--- a/ElectronMS/pom.xml
+++ b/ElectronMS/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>jython-standalone</artifactId>
             <version>2.7.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
     </dependencies>
     
 </project>
